# raylib-game

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  game.cpp  game.h  main.cpp
